--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,19 @@
         "framework",
         "laravel"
     ],
+    "repositories": [{
+            "type": "composer",
+            "url": "https://packagist.org"
+        },
+        {
+            "packagist": false
+        }
+    ],
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
         "barryvdh/laravel-dompdf": "^0.8.6",
+        "consoletvs/charts": "6.*",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
